# Regulome

./: Cargo.toml  README.md  boot.efi
boot/: Cargo.toml  bootloader-test-qemu.sh  test.sh
boot/src/: bdf_loader.rs  main.rs
kern/: Cargo.toml  kern  limine.cfg  test.sh
kern/.cargo/: config.toml
kern/src/: main.rs
lib/elf/: Cargo.toml
lib/elf/src/: lib.rs
lib/graphics/: Cargo.toml
lib/graphics/src/: lib.rs
lib/mem/: Cargo.toml
lib/mem/src/: lib.rs
lib/process/src/: lib.rs
