[package]
name = "regulome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	"lib/*",
	"boot",
	"kern"
]

[workspace.dependencies]
log = "0.4.21"
uefi = { version = "0.27.0", features = ["alloc"] }
uefi-services = "0.24.0"
elf = {version = "0.7.4", default-features = false }
x86_64 = {version = "0.15.1", default-features = false, features = ['instructions']}
